# qt-mini-db-tool

./: CMakeLists.txt  main.cpp
headers/: connection.h  sidebar.h  window.h
headers/menu/: codeeditor.h  linenumberarea.h  querydialog.h
headers/table/: mysortfilterproxymodel.h  tableeditor.h
sources/: sidebar.cpp  window.cpp
sources/menu/: codeeditor.cpp  linenumberarea.cpp  querydialog.cpp
sources/table/: mysortfilterproxymodel.cpp  tableeditor.cpp
